fix: social media icon alignment

--- a/src/scss/2020/components/_site-footer.scss
+++ b/src/scss/2020/components/_site-footer.scss
@@ -27,6 +27,18 @@
   &__social-icons {
     display: flex;
     flex-wrap: wrap;
+
+    @supports (display: grid) {
+      display: grid;
+      grid-gap: 2rem;
+      grid-template-columns: 3rem 3rem 3rem;
+      grid-auto-rows: auto;
+      margin-top: space(sm);
+
+      @media (min-width: $bp-lg) {
+        margin-top: 6rem;
+      }
+    }
   }
 
   &__social-icon {
@@ -39,6 +51,10 @@
     background-color: color(blue);
     border-radius: 50%;
     transition: background-color 250ms ease-in-out;
+    
+    @supports (display: grid) {
+      margin: 0;
+    }
 
     &:hover {
       background-color: color(white);
